[gd_scene load_steps=2 format=3 uid="uid://cjxm7y4n8p2qr"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="2_ui_script"]

[sub_resource type="GDScript" id="GDScript_1"]
script/source = "extends Control

@onready var health_bar = $HealthBar
@onready var health_label = $HealthBar/HealthLabel
@onready var ammo_label = $AmmoLabel
@onready var crosshair = $Crosshair

var player: Node3D

func _ready():
	var players = get_tree().get_nodes_in_group(\"player\")
	if players.size() > 0:
		player = players[0]

func _process(_delta):
	if player:
		update_health_display()
		update_ammo_display()

func update_health_display():
	if not player.has_method(\"get_health\"):
		return
		
	var current_health = player.get_health()
	var max_health = player.get_max_health()
	
	health_label.text = str(current_health) + \"/\" + str(max_health)
	
	if max_health > 0:
		health_bar.value = (float(current_health) / float(max_health)) * 100

func update_ammo_display():
	if not player.has_method(\"get_ammo\"):
		return
		
	var current_ammo = player.get_ammo()
	
	# Check if reloading
	if player.has_method(\"get_is_reloading\") and player.get_is_reloading():
		var progress = 0.0
		if player.has_method(\"get_reload_progress\"):
			progress = player.get_reload_progress()
		
		var percent = int(progress * 100)
		ammo_label.text = \"Reloading... \" + str(percent) + \"%\"
		ammo_label.modulate = Color.YELLOW
	else:
		ammo_label.text = \"Ammo: \" + str(current_ammo)
		ammo_label.modulate = Color.WHITE
"

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("2_ui_script")

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
mouse_filter = 2

[node name="CrosshairH" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -1.0
offset_right = 10.0
offset_bottom = 1.0
color = Color(1, 1, 1, 0.8)

[node name="CrosshairV" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -10.0
offset_right = 1.0
offset_bottom = 10.0
color = Color(1, 1, 1, 0.8)

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 220.0
offset_bottom = -40.0
value = 100.0

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 12.0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -40.0
text = "Ammo: 30"
horizontal_alignment = 2
vertical_alignment = 1